# -Cybersecurity-Agent

./: .gitignore  README.md  main.py  pyproject.toml
.github/agents/: cybersecurity-agent-builder.agent.md
.github/workflows/: sentinel-deploy-212b7129-0ac7-4deb-800a-0c0df3d2c722.yml
copilot/prompts/: system_instructions.txt
copilot/wrapper_config/: local-mcp.example.json
cybersecurity-agent/: .env.example  agent.py  report_generator.py  requirements.txt  skill_index.py  skill_loader.py  skill_router.py
docker/: Dockerfile
scripts/: seed_catalog.py  sync_skills.ps1
src/security_agent/: __init__.py  app.py  config.py
src/security_agent/api/: routes.py  server.py
src/security_agent/catalog/: manifest_loader.py  ranking.py  repository.py  search.py
src/security_agent/ingestion/: checksum.py  parser.py  sync.py  validator.py
src/security_agent/integrations/: copilot_wrapper.py  git_source.py  local_shell.py  mcp_server.py  web_fetch.py
src/security_agent/models/: __init__.py  execution_trace.py  request_context.py  skill.py
src/security_agent/orchestrator/: executor.py  intent_classifier.py  prompt_builder.py  skill_loader.py  skill_selector.py
src/security_agent/policies/: approvals.py  content_redaction.py  risk_classifier.py  tool_allowlist.py
tests/catalog/: test_repository.py
tests/fixtures/sample_skills/memory-forensics/: SKILL.md
tests/ingestion/: test_parser.py
tests/orchestrator/: test_service.py
