[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-agent-skeleton"
version = "0.1.0"
description = "GitHub Copilot-focused security agent skeleton with a local MCP-style backend"
readme = "copilot/prompts/system_instructions.txt"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
security-agent = "security_agent.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
